--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ Desktop.ini
 
 # Virtual environment for local development
 local-dev-env/*
+
+# Nodejs packages
+node_modules/*
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
