--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
   },
   "homepage": "https://github.com/ierg4210/shop53",
   "dependencies": {
+    "any-db": "^2.1.0",
+    "any-db-mysql": "^2.1.2",
+    "body-parser": "^1.12.0",
     "express": "^4.11.2",
-    "express-handlebars": "^1.1.0"
+    "express-handlebars": "^1.1.0",
+    "express-validator": "^2.8.0",
+    "handlebars-helper-equal": "^1.0.0"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
