--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.12.0",
     "express": "^4.11.2",
     "express-handlebars": "^1.1.0",
+    "express-session": "^1.10.3",
     "express-validator": "^2.8.0",
     "handlebars-helper-equal": "^1.0.0",
     "multer": "^0.1.7"
