Declare NodeJS production environment in elastic beanstalk

--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -2,3 +2,5 @@ option_settings:
   - namespace: aws:rds:dbinstance
     option_name: DBEngineVersion
     value: 5.6
+  - option_name: NODE_ENV
+    value: production
