--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "any-db": "^2.1.0",
     "any-db-mysql": "^2.1.2",
     "body-parser": "^1.12.0",
+    "connect-redis": "^2.2.0",
+    "cookie-parser": "^1.3.4",
     "csurf": "^1.7.0",
     "express": "^4.11.2",
     "express-handlebars": "^1.1.0",
     "express-session": "^1.10.3",
     "express-validator": "^2.8.0",
     "handlebars-helper-equal": "^1.0.0",
-    "multer": "^0.1.7"
+    "multer": "^0.1.7",
+    "node-uuid": "^1.4.3",
+    "paypal-rest-sdk": "^1.5.2",
+    "redis": "^0.12.1"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
