--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "csurf": "^1.7.0",
     "express": "^4.11.2",
     "express-handlebars": "^1.1.0",
+    "express-secure-handlebars": "^1.2.0",
     "express-session": "^1.10.3",
     "express-validator": "^2.8.0",
     "handlebars-helper-equal": "^1.0.0",
