--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "any-db": "^2.1.0",
     "any-db-mysql": "^2.1.2",
+    "aws-sdk": "^2.1.26",
     "body-parser": "^1.12.0",
     "connect-redis": "^2.2.0",
     "cookie-parser": "^1.3.4",
@@ -43,7 +44,8 @@
     "multer": "^0.1.7",
     "node-uuid": "^1.4.3",
     "paypal-rest-sdk": "^1.5.2",
-    "redis": "^0.12.1"
+    "redis": "^0.12.1",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "supervisor": "^0.6.0"
