--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "handlebars-helper-equal": "^1.0.0",
     "multer": "^0.1.7",
     "node-uuid": "^1.4.3",
+    "nodemailer": "^1.3.4",
     "paypal-rest-sdk": "^1.5.2",
     "redis": "^0.12.1",
     "slug": "^0.9.1",
